[package]
name = "solo5_hello"
version = "0.1.0"
authors = ["Nikita Nazarenko <savant.d@gmail.com>"]

[profile.dev]
debug = true
opt-level = 0

[dependencies]
solo5 = { path = "/home/savant/devel/solo5/solo5-rs", features = ["virtio"] }
#solo5 = { git = "https://github.com/savant2212/solo5-rs", features = ["virtio"] }

[lib]
crate-type = ["staticlib"]
